CREATE EXTENSION IF NOT EXISTS postgis;
CREATE EXTENSION IF NOT EXISTS pg_trgm;

CREATE TABLE users (
    user_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    provider VARCHAR(20) NOT NULL DEFAULT 'GOOGLE',
    provider_user_id VARCHAR(255) NOT NULL,
    email VARCHAR(320),
    nickname VARCHAR(20),
    profile_image_url TEXT,
    bio VARCHAR(200),
    locale VARCHAR(10) NOT NULL DEFAULT 'ko-KR',
    role VARCHAR(20) NOT NULL DEFAULT 'USER' CHECK (role IN ('USER', 'ADMIN')),
    status VARCHAR(20) NOT NULL DEFAULT 'ACTIVE' CHECK (status IN ('ACTIVE', 'SUSPENDED', 'WITHDRAWN')),
    terms_agreed_at TIMESTAMPTZ,
    created_at TIMESTAMPTZ NOT NULL DEFAULT now(),
    updated_at TIMESTAMPTZ NOT NULL DEFAULT now(),
    UNIQUE (provider, provider_user_id)
);

CREATE TABLE user_devices (
    device_id VARCHAR(200) PRIMARY KEY,
    user_id BIGINT NOT NULL REFERENCES users(user_id) ON DELETE CASCADE,
    fcm_token TEXT,
    platform VARCHAR(20) NOT NULL CHECK (platform IN ('IOS', 'ANDROID')),
    app_version VARCHAR(50),
    updated_at TIMESTAMPTZ NOT NULL DEFAULT now()
);

CREATE TABLE refresh_tokens (
    token_hash CHAR(64) PRIMARY KEY,
    user_id BIGINT NOT NULL REFERENCES users(user_id) ON DELETE CASCADE,
    device_id VARCHAR(200) NOT NULL REFERENCES user_devices(device_id) ON DELETE CASCADE,
    expires_at TIMESTAMPTZ NOT NULL,
    revoked_at TIMESTAMPTZ,
    replaced_by_hash CHAR(64),
    created_at TIMESTAMPTZ NOT NULL DEFAULT now()
);

CREATE TABLE regions (
    area_code INTEGER PRIMARY KEY,
    name_ko VARCHAR(100) NOT NULL,
    name_en VARCHAR(100) NOT NULL,
    representative_image_url TEXT,
    default_event_verify_radius_m INTEGER NOT NULL DEFAULT 2000 CHECK (default_event_verify_radius_m BETWEEN 1 AND 20000)
);

CREATE TABLE sigungu (
    area_code INTEGER NOT NULL REFERENCES regions(area_code) ON DELETE RESTRICT,
    sigungu_code INTEGER NOT NULL,
    name_ko VARCHAR(100) NOT NULL,
    name_en VARCHAR(100) NOT NULL,
    PRIMARY KEY (area_code, sigungu_code)
);

CREATE TABLE places (
    place_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    place_type VARCHAR(20) NOT NULL CHECK (place_type IN ('OFFICIAL', 'USER')),
    content_id VARCHAR(100),
    content_type_id INTEGER,
    title VARCHAR(100) NOT NULL,
    normalized_title VARCHAR(100) NOT NULL,
    addr1 VARCHAR(300),
    image_url TEXT,
    geom geography(Point, 4326),
    verify_radius_m INTEGER NOT NULL CHECK (verify_radius_m BETWEEN 1 AND 20000),
    area_code INTEGER NOT NULL REFERENCES regions(area_code) ON DELETE RESTRICT,
    sigungu_code INTEGER,
    has_coordinate BOOLEAN NOT NULL DEFAULT FALSE,
    post_count INTEGER NOT NULL DEFAULT 0 CHECK (post_count >= 0),
    visit_count INTEGER NOT NULL DEFAULT 0 CHECK (visit_count >= 0),
    view_count BIGINT NOT NULL DEFAULT 0 CHECK (view_count >= 0),
    created_by BIGINT REFERENCES users(user_id) ON DELETE SET NULL,
    source_modified_at TIMESTAMPTZ,
    status VARCHAR(20) NOT NULL DEFAULT 'ACTIVE' CHECK (status IN ('ACTIVE', 'HIDDEN', 'DELETED')),
    created_at TIMESTAMPTZ NOT NULL DEFAULT now(),
    updated_at TIMESTAMPTZ NOT NULL DEFAULT now(),
    CONSTRAINT fk_places_sigungu FOREIGN KEY (area_code, sigungu_code)
        REFERENCES sigungu(area_code, sigungu_code) ON DELETE RESTRICT
);
CREATE UNIQUE INDEX uk_places_content ON places(content_id, content_type_id) WHERE content_id IS NOT NULL;
CREATE INDEX gix_places_geom ON places USING GIST(geom);
CREATE INDEX gin_places_title ON places USING GIN(normalized_title gin_trgm_ops);
CREATE INDEX idx_places_area_type ON places(area_code, sigungu_code, content_type_id, place_id) WHERE status = 'ACTIVE';
CREATE INDEX idx_places_creator_day ON places(created_by, created_at) WHERE place_type = 'USER';

CREATE TABLE place_details (
    place_id BIGINT NOT NULL REFERENCES places(place_id) ON DELETE CASCADE,
    language_code VARCHAR(10) NOT NULL,
    overview TEXT,
    tel VARCHAR(100),
    homepage TEXT,
    use_time TEXT,
    rest_date TEXT,
    loaded_at TIMESTAMPTZ NOT NULL DEFAULT now(),
    PRIMARY KEY (place_id, language_code)
);

CREATE TABLE events (
    event_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    content_id VARCHAR(100) UNIQUE,
    title VARCHAR(200) NOT NULL,
    overview TEXT,
    area_code INTEGER NOT NULL REFERENCES regions(area_code) ON DELETE RESTRICT,
    place_id BIGINT NOT NULL REFERENCES places(place_id) ON DELETE RESTRICT,
    start_date DATE NOT NULL,
    end_date DATE NOT NULL,
    thumbnail_url TEXT,
    fixed_tags JSONB NOT NULL DEFAULT '[]'::jsonb,
    participant_count INTEGER NOT NULL DEFAULT 0,
    source VARCHAR(20) NOT NULL DEFAULT 'MANUAL',
    verify_radius_m INTEGER CHECK (verify_radius_m BETWEEN 1 AND 20000),
    status VARCHAR(20) NOT NULL DEFAULT 'ACTIVE',
    created_at TIMESTAMPTZ NOT NULL DEFAULT now(),
    updated_at TIMESTAMPTZ NOT NULL DEFAULT now(),
    CHECK (end_date >= start_date)
);

CREATE TABLE posts (
    post_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id BIGINT NOT NULL REFERENCES users(user_id) ON DELETE RESTRICT,
    place_id BIGINT NOT NULL REFERENCES places(place_id) ON DELETE RESTRICT,
    event_id BIGINT REFERENCES events(event_id) ON DELETE SET NULL,
    content TEXT,
    tier VARCHAR(20) NOT NULL DEFAULT 'LOW' CHECK (tier IN ('HIGH', 'MEDIUM', 'LOW')),
    like_count INTEGER NOT NULL DEFAULT 0,
    comment_count INTEGER NOT NULL DEFAULT 0,
    status VARCHAR(20) NOT NULL DEFAULT 'ACTIVE' CHECK (status IN ('ACTIVE', 'HIDDEN', 'DELETED')),
    created_at TIMESTAMPTZ NOT NULL DEFAULT now(),
    updated_at TIMESTAMPTZ NOT NULL DEFAULT now()
);
CREATE INDEX idx_posts_place ON posts(place_id, created_at DESC, post_id DESC) WHERE status = 'ACTIVE';

CREATE TABLE post_images (
    post_image_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    post_id BIGINT NOT NULL REFERENCES posts(post_id) ON DELETE CASCADE,
    image_key TEXT NOT NULL,
    thumbnail_url TEXT NOT NULL,
    aspect_ratio NUMERIC(8,4) NOT NULL DEFAULT 1,
    sort_order SMALLINT NOT NULL,
    UNIQUE(post_id, sort_order)
);

CREATE TABLE bookmarks (
    user_id BIGINT NOT NULL REFERENCES users(user_id) ON DELETE CASCADE,
    target_type VARCHAR(20) NOT NULL CHECK (target_type IN ('POST', 'PLACE')),
    target_id BIGINT NOT NULL,
    created_at TIMESTAMPTZ NOT NULL DEFAULT now(),
    PRIMARY KEY (user_id, target_type, target_id)
);

CREATE TABLE tags (
    tag_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR(100) NOT NULL,
    normalized_name VARCHAR(100) NOT NULL UNIQUE,
    theme_code VARCHAR(100),
    usage_count INTEGER NOT NULL DEFAULT 0
);

CREATE TABLE place_rankings (
    ranking_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    place_id BIGINT NOT NULL REFERENCES places(place_id) ON DELETE CASCADE,
    area_code INTEGER NOT NULL REFERENCES regions(area_code) ON DELETE RESTRICT,
    period VARCHAR(20) NOT NULL,
    theme VARCHAR(100) NOT NULL DEFAULT 'ALL',
    score NUMERIC(18,4) NOT NULL DEFAULT 0,
    rank_no INTEGER NOT NULL,
    previous_rank INTEGER,
    calculated_at TIMESTAMPTZ NOT NULL DEFAULT now(),
    UNIQUE(place_id, period, theme)
);

CREATE TABLE reports (
    report_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    reporter_id BIGINT NOT NULL REFERENCES users(user_id) ON DELETE RESTRICT,
    target_type VARCHAR(20) NOT NULL CHECK (target_type IN ('POST', 'PLACE', 'COMMENT', 'USER')),
    target_id BIGINT NOT NULL,
    reason VARCHAR(50) NOT NULL,
    detail TEXT,
    status VARCHAR(20) NOT NULL DEFAULT 'PENDING' CHECK (status IN ('PENDING', 'RESOLVED', 'REJECTED')),
    action VARCHAR(20),
    memo VARCHAR(1000),
    reviewed_at TIMESTAMPTZ,
    created_at TIMESTAMPTZ NOT NULL DEFAULT now(),
    UNIQUE(reporter_id, target_type, target_id)
);

CREATE TABLE batch_runs (
    run_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    job_type VARCHAR(50) NOT NULL,
    status VARCHAR(20) NOT NULL CHECK (status IN ('QUEUED', 'RUNNING', 'SUCCESS', 'FAIL')),
    processed_count INTEGER NOT NULL DEFAULT 0,
    failed_count INTEGER NOT NULL DEFAULT 0,
    started_at TIMESTAMPTZ,
    finished_at TIMESTAMPTZ,
    created_at TIMESTAMPTZ NOT NULL DEFAULT now()
);
CREATE UNIQUE INDEX uk_running_batch_job ON batch_runs(job_type) WHERE status IN ('QUEUED', 'RUNNING');

CREATE TABLE sync_logs (
    sync_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    run_id BIGINT NOT NULL REFERENCES batch_runs(run_id) ON DELETE CASCADE,
    job_type VARCHAR(50) NOT NULL,
    area_code INTEGER REFERENCES regions(area_code) ON DELETE RESTRICT,
    content_type_id INTEGER,
    result VARCHAR(20) NOT NULL CHECK (result IN ('SUCCESS', 'FAIL', 'PARTIAL')),
    count INTEGER NOT NULL DEFAULT 0,
    message TEXT,
    started_at TIMESTAMPTZ NOT NULL DEFAULT now(),
    finished_at TIMESTAMPTZ
);
CREATE INDEX idx_sync_logs_cursor ON sync_logs(sync_id DESC);
